<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout"
    android:orientation="vertical" >

    <include
        android:layout_height="55dp"
        layout="@layout/activity_header_mobile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_detailsIncluedeWish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishlistTitle"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_MiniIncludeWish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishlistDesc"
            android:textSize="10sp"
            android:textStyle="italic" />
    </LinearLayout>

    <!-- TABELA COM ELEMENTOS DO FORMULARIO -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_includeWishCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wishCategoria" />

                    <Spinner
                        android:id="@+id/spinner_includeWishCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_includeWishSubCateg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wishSubCategoria" />

                    <Spinner
                        android:id="@+id/spinner_includeWishSubCateg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_includeWishProduto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wishProduto" />

                    <EditText
                        android:id="@+id/editText1_includeWishProduto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_includeWishData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wishlistDataLimite" />

                    <EditText
                        android:id="@+id/editText1_includeWishData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_includeWishDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wishDescricao" />

                    <EditText
                        android:id="@+id/editText_includeWishDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/button_includeWish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="addWish"
                        android:text="@string/wishlistButton" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_height="55dp"
        layout="@layout/include_tablet_footer" />

</LinearLayout>