<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout"
    android:orientation="vertical" >

    <include
        android:layout_height="55dp"
        layout="@layout/activity_header_mobile" />

    <TextView
        android:id="@+id/textView_detailsOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkTitleCompras"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_MiniDetailsOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkSubTitleCompras"
        android:textSize="10sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/list_Checkout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout_Check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/border">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Detalhes da Compra"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView_checkout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/compartilhar_on" />

            <ProgressBar
                android:id="@+id/progressBar_checkout"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_titleDias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkTitleEntrega"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_checkDiasUteis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_titlePagamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkTitlePagamento"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_checkPagamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_titleMoipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkTitleMoipCode"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_checkMoipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_titleCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkTitleCompany"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_Company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_titleContato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkTitleContato"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_checkContato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <include
        android:layout_height="55dp"
        layout="@layout/include_tablet_footer" />

</LinearLayout>