<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#ffffff">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/titleNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkNumPedido"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkTitleDataCompra"
                android:layout_weight="1"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_checkNumPedido"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_checkData"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/titleOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkProduto"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkValor"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_checkOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView_checkValue"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center" >

            <TextView
                android:id="@+id/textView_checkTitleStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/checkTitleStatus"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_checkStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

</RelativeLayout>