<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout" >

    <include
        android:id="@+id/include1"
        android:layout_height="55dp"
        layout="@layout/activity_header_mobile" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/include1"
        android:background="@drawable/bg_title"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/comprasTabNumPedido"
            android:textColor="#fff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/comprasTabProduto"
            android:textColor="#fff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/comprasTabData"
            android:textColor="#fff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/comprasTabValor"
            android:textColor="#fff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/comprasTabStatus"
            android:textColor="#fff"
            android:textSize="12dp" />
    </TableRow>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rodape"
        android:layout_below="@id/tableRow1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ExpandableListView
                android:id="@android:id/list"
                android:layout_width="650dp"
                android:layout_height="270dp"
                android:layout_alignParentBottom="true"
                android:childDivider="@android:color/white"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="2dp"
                android:fadingEdge="none" >

            </ExpandableListView>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical" >

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/activity_footer_mobile"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <WebView
        android:id="@+id/webViewLoad"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>